--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -48,7 +48,7 @@
 }
 
 .nav-item {
-    height: 80px;
+    height: 100px;
 }
 
 .nav-links {
@@ -100,7 +100,7 @@
     }
 
     .nav-menu.active {
-        background: #242222;
+        background: #014874;
         left: 0;
         opacity: 1;
         transition: all 0.5s ease;
@@ -109,9 +109,11 @@
 
     .nav-links {
         text-align: center;
-        padding: 2rem;
+        padding: 1.5rem;
         width: 100%;
         display: table;
+        transform: translate(0%, -210%);
+        font-size: 3rem;
     }
 
     .nav-links:hover {
@@ -145,16 +147,16 @@
     .nav-links-mobile {
         display: block;
         text-align: center;
-        margin: 2rem auto;
+        margin: 1.5rem auto;
         border-radius: 4px;
-        width: 80%;
+        width: 100%;
         text-decoration: none;
-        font-size: 1.5rem;
+        font-size: 3rem;
         background-color: transparent;
         color: #fff;
-        padding: 14px 20px;
-        border: 1px solid #fff;
-        transition: all 0.3s ease-out;
+        padding: 1.5rem;
+        transition: all 0.2s ease-out;
+        transform: translate(0%, -240%);
     }
 
     .nav-links-mobile:hover {
