--- a/src/Components/Register.css
+++ b/src/Components/Register.css
@@ -88,7 +88,7 @@ button:active {
 
 /*Kilde: https://www.youtube.com/watch?v=WvRwiE9IkFg&t=1s */
 
-.login-btn {
+.login-btn3 {
     margin-top: 150px;
     font-size: 30px;
 }
@@ -96,4 +96,13 @@ button:active {
 .register-btn {
     margin-top: 40px;
     font-size: 30px;
+}
+
+.link2 {
+    display: flex;
+    color: white;
+    font-size: 25px;
+    margin-top: 10px;
+    justify-content: center;
+    align-items: center;
 }
