--- a/src/Components/Card.css
+++ b/src/Components/Card.css
@@ -21,13 +21,12 @@ body{
     border-radius: 0.2rem;
     min-width: 28rem;
     display: flex;
+    margin-bottom: 30px
 }
 
 .card_img{
     width: 14rem;
-    height: 11rem;
-    object-fit:fit;
-    height: 100%;
+    height: 13rem;
 }
 
 .card_body{
