changed timers, added product groups, small changes in design, added a way to show components in slider, added dataamount updater, added real components and services to shop

--- a/src/Components/Cart.css
+++ b/src/Components/Cart.css
@@ -25,10 +25,10 @@
     transition: all 0.3s ease-out;
 }
 
-.btn--medium {
+.btn--medium2 {
     font-size: 20px;
     position: relative;
-    padding: 2px;
+    padding: 10px;
 }
 
 .remove_item {
@@ -54,7 +54,7 @@
 
 .money_left {
     display: inline-block;
-    margin-left: 140px;
+    margin-left: 130px;
 }
 
 .line {
