--- a/src/Components/Card.css
+++ b/src/Components/Card.css
@@ -21,7 +21,7 @@ body{
 
 .card_img{
     width: 14rem;
-    height: 13rem;
+    height: 14rem;
 }
 
 .card_body{
@@ -30,13 +30,15 @@ body{
 }
 
 .card_title{
-    line-height: 1.4rem;
     margin-bottom: 0.5rem;
-    font-size: 42px;
+    font-size: 34px;
+    line-break: auto;
+    white-space: pre-line;
+    width: 100%;
 }
 
-.card:description{
-    line-height: 1.2rem;
+.card_description{
+    font-size: 26px;
 }
 
 .card_price{
