--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -56,8 +56,10 @@
     display: flex;
     align-items: center;
     text-decoration: none;
-    padding: 0.5rem 1rem;
-    height: 100%;
+    padding: 0rem 1rem;
+    height: 60%;
+    margin-top: 16px;
+    margin-right: 10px;
 }
 
 .nav-links:hover {
@@ -137,6 +139,7 @@
         transform: translate(-100%, 60%);
         font-size: 1.8rem;
         cursor: pointer;
+        color: white;
     }
 
     .fa-times {
